--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -69,9 +69,9 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PASS}
+    url: ${DATABASE_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:pantrypulse}}
+    username: ${DB_USER:pantrypulse}
+    password: ${DB_PASS:viswa123}
   jpa:
     show-sql: false
     hibernate:
