Fix: Move datasource config to profiles, use DATABASE_PUBLIC_URL for Railway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,21 +4,10 @@ server:
 spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
-  datasource:
-    url: ${DB_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:pantrypulse}}
-    driver-class-name: org.postgresql.Driver
-    username: ${DB_USER:pantrypulse}
-    password: ${DB_PASS:viswa123}
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-  sql:
-    init:
-      mode: always
   # Disable Redis auto-configuration when Redis is not available
   autoconfigure:
     exclude:
@@ -55,12 +44,19 @@ spring:
       on-profile: dev
   datasource:
     url: jdbc:postgresql://localhost:5432/pantrypulse
+    driver-class-name: org.postgresql.Driver
     username: pantrypulse
     password: viswa123
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+  sql:
+    init:
+      mode: always
 
 ---
 # Production profile
@@ -69,8 +65,9 @@ spring:
     activate:
       on-profile: prod
   datasource:
-    # Railway provides DATABASE_URL automatically
-    url: ${DATABASE_URL}
+    # Railway provides DATABASE_URL or DATABASE_PUBLIC_URL
+    url: ${DATABASE_PUBLIC_URL:${DATABASE_URL}}
+    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: false
     hibernate:
